# pomodoro-gui

./: dev.sh  package-lock.json  package.json  shell.nix
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: home_page.rs  main.rs  settings_page.rs
src-tauri/src/home_page/: notifications.rs
src/app/: globals.css  layout.tsx  page.module.css  page.tsx  settings.tsx
src/app/info/: page.module.css  page.tsx
src/app/settings/: page.module.css  page.tsx
src/components/: buttonClose.tsx  buttonMinimize.tsx  titlebar.tsx
src/components/home/: controlButtons.tsx  page.module.css  progressBar.tsx  volumeSlider.tsx
src/components/home/controlButtons/: buttonPlayPause.tsx  buttonSkipBackward.tsx  buttonSkipForward.tsx  playButton.tsx
src/components/home/progressBar/: progressBar.tsx
src/components/icons/: CloseIcon.tsx  InfoIcon.tsx  MinimizeIcon.tsx  PauseIcon.tsx  PlayIcon.tsx  SkipBackwardIcon.tsx  SkipForwardIcon.tsx
src/components/icons/home/: PauseIcon.tsx  PlayIcon.tsx  SkipBackwardIcon.tsx  SkipForwardIcon.tsx
src/components/icons/home/volume/: VolumeIcon-1.tsx  VolumeIcon-2.tsx  VolumeIcon-x.tsx  VolumeIcon.tsx
src/components/icons/titlebar/: CloseIcon.tsx  MinimizeIcon.tsx  SettingsIcon.tsx
src/components/settings/: settingsGrid.tsx
src/components/titlebar/: buttonClose.tsx  buttonInfo.tsx  buttonMinimize.tsx  buttonSettings.tsx  page.module.css  titlebar.tsx
src/util/enums/: cyclePhase.ts  cyclePhaseText.ts
src/values/: colors.ts
